--- a/agentic-control-demo.html
+++ b/agentic-control-demo.html
@@ -275,14 +275,10 @@
     </div>
 
     <div class="grid" style="margin-top:12px;">
-      <div class="card">
+      <div class="card" style="grid-column: span 3;">
         <h3>GenAI Hub</h3>
-        <p style="color:var(--muted); margin-top:-4px;">Open the external DXC GenAI Hub experience inside the Billing view.</p>
-        <button class="btn" onclick="loadGenAIHub()">Load GenAI Hub</button>
-      </div>
-      <div class="card" style="grid-column: span 2;">
-        <h3>GenAI Hub View</h3>
-        <iframe id="genai_hub_iframe" title="DXC GenAI Hub" style="width:100%; height:480px; border:1px solid var(--border); border-radius:8px; background:white;" src="about:blank"></iframe>
+        <p style="color:var(--muted); margin-top:-4px;">Open the external DXC GenAI Hub experience in your default browser.</p>
+        <button class="btn" onclick="loadGenAIHub()">Open GenAI Hub</button>
       </div>
     </div>
   </section>
